# flection

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: .gitignore  CmakeLists.txt  example.cpp  fileA.hpp
example/flection/: flection.hpp
include/: file.hpp  logWrapper.hpp  metaDefs.hpp
include/clangWrapper/: cursorWrapper.hpp  fileUnit.hpp  index.hpp
include/generator/: generator.hpp
include/rfl/: reflection.hpp  reflection_impl
include/rflParser/: cursorParser.hpp  reflectionDecl.hpp  rflParser.hpp
include/utils/: clangUtils.hpp  fileSystemUtils.hpp  utils.hpp
metaGen/: flectionIncludeAll.hpp
src/: clangUtils.cpp  cursorParser.cpp  cursorWrapper.cpp  file.cpp  fileSystemUtils.cpp  fileUnit.cpp  generator.cpp  logWrapper.cpp  main.cpp  rflParser.cpp
templates/: reflection_gen.template  reflection_gen_include_all.template
